# causal-sim2real

./: .gitignore  Dockerfile  HRISim_build.sh  HRISim_run.sh  README.md  docbuild.sh  docker-compose.yaml  docrun.sh  docshell.sh  docstop.sh  entrypoint.sh  index.html  lfs.sh  plot_PD_distribution.py  start_docker.sh  task_list.pkl
HRISim_docker/: Dockerfile  entrypoint.sh
HRISim_docker/HRISim/hrisim_actions/: CMakeLists.txt
HRISim_docker/HRISim/hrisim_actions/scripts/: generateRandomGoal.py  goto.py  predict.py  predict_old.py  record.py  record_sim.py
HRISim_docker/HRISim/hrisim_gazebo/launch/: simulation.launch
HRISim_docker/HRISim/hrisim_gazebo/worlds/: maze.world  maze_corridor_withDoors.world  maze_corridor_withTurn.world  warehouse_original.world
HRISim_docker/HRISim/hrisim_plans/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/hrisim_plans/hardcoded/: goal_definition.py  task_list.json  task_list.pkl
HRISim_docker/HRISim/hrisim_plans/helper/: goal_definition.py  task_list.pkl
HRISim_docker/HRISim/hrisim_plans/scripts/: TIAGo_causal_hardcoded_plan.py  TIAGo_causal_hardcoded_plan_customA.py  TIAGo_causal_hardcoded_plan_original.py  TIAGo_causal_plan.py  TIAGo_noncausal_hardcoded_plan.py  TIAGo_noncausal_load_hardcoded_plan.py  TIAGo_noncausal_plan.py  TIAGo_plan.py  TIAGo_test_causal_plan.py  TIAGo_test_noncausal_plan.py
HRISim_docker/HRISim/hrisim_recording/scripts/: record.py
HRISim_docker/HRISim/hrisim_rviz/launch/: visualisation_rviz.launch
HRISim_docker/HRISim/hrisim_rviz/scripts/: risk_visualiser.py
HRISim_docker/HRISim/hrisim_tmule/tmule/: hrisim_bringup.yaml
HRISim_docker/HRISim/hrisim_twist_mux/: package.xml
HRISim_docker/HRISim/hrisim_util/: setup.py
HRISim_docker/HRISim/peopleflow/peopleflow_counter/: package.xml
HRISim_docker/HRISim/peopleflow/peopleflow_manager/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/peopleflow/peopleflow_msgs/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/peopleflow/peopleflow_msgs/msg/: WPPeopleCounter.msg  pfAgent.msg
HRISim_docker/HRISim/peopleflow/peopleflow_pedsim_bridge/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/peopleflow/rqt_peopleflow/: CMakeLists.txt  package.xml  setup.py
HRISim_docker/HRISim/pnp_ros/: main.cpp
HRISim_docker/HRISim/prediction/hrisim_prediction_manager/: package.xml
HRISim_docker/HRISim/prediction/hrisim_prediction_srvs/: CMakeLists.txt
HRISim_docker/HRISim/prediction/hrisim_prediction_srvs/srv/: GetRiskMap.srv
HRISim_docker/HRISim/robot/robot_clearing_distance/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/robot/robot_clearing_distance/scripts/: robot_clearingDistance.py  test.py
HRISim_docker/HRISim/robot/robot_info/: package.xml
HRISim_docker/HRISim/robot/robot_msgs/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/robot/robot_obs/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/robot/robot_srvs/: CMakeLists.txt
HRISim_docker/HRISim/robot/robot_srvs/srv/: NewTask.srv
HRISim_docker/HRISim/robot/robot_task/: package.xml
HRISim_docker/HRISim/robot/robot_twist_mux/: CMakeLists.txt
HRISim_docker/HRISim/tiago_battery/: package.xml
HRISim_docker/HRISim/tiago_battery/launch/: sim_battery.launch
HRISim_docker/HRISim/tiago_battery/scripts/: sim_battery.py
HRISim_docker/HRISim/tiago_info/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/tiago_info/scripts/: tiago_pathinfo.py  tiago_taskinfo.py
HRISim_docker/HRISim/tiago_recovery/: CMakeLists.txt  package.xml
HRISim_docker/HRISim/tiago_recovery/scripts/: localiseMe.py  standUp.py
HRISim_docker/pedsim_ros/pedsim_gazebo_plugin/scripts/: spawn_pedsim_agents.py
HRISim_docker/pedsim_ros/pedsim_simulator/launch/: mysimulator.launch
HRISim_docker/pedsim_ros/pedsim_simulator/scenarios/: warehouse.xml  warehouse_H1.xml  warehouse_H10.xml  warehouse_H2.xml  warehouse_H3.xml  warehouse_H4.xml  warehouse_H5.xml  warehouse_H6.xml  warehouse_H7.xml  warehouse_H8.xml  warehouse_H9.xml  warehouse_off.xml  warehouse_old.xml  warehouse_test.xml
HRISim_docker/pedsim_ros/pedsim_simulator/src/: agentstatemachine.cpp  simulator.cpp
HRISim_docker/src/HRISim/hrisim_actions/: package.xml
HRISim_docker/src/HRISim/hrisim_conditions/: CMakeLists.txt  package.xml
HRISim_docker/src/HRISim/hrisim_gazebo/: physics_params.sh
HRISim_docker/src/HRISim/hrisim_rviz/: CMakeLists.txt  package.xml
HRISim_docker/src/HRISim/hrisim_util/: CMakeLists.txt  package.xml
HRISim_docker/src/HRISim/peopleflow/peopleflow_bringup/: CMakeLists.txt  package.xml
HRISim_docker/src/HRISim/peopleflow/peopleflow_bringup/launch/: peopleflow_bringup.launch
HRISim_docker/src/HRISim/peopleflow/rqt_peopleflow/: package.xml  plugin.xml
HRISim_docker/src/HRISim/peopleflow/rqt_peopleflow/scripts/: agents_info.py  rqt_peopleflow.py
HRISim_docker/src/HRISim/prediction/hrisim_prediction_srvs/: package.xml
HRISim_docker/src/HRISim/prediction/hrisim_prediction_srvs/srv/: GetRiskMap.srv
HRISim_docker/src/HRISim/robot/robot_twist_mux/: package.xml
HRISim_docker/src/pedsim_ros/pedsim_srvs/: CMakeLists.txt
causal_discovery/: CausalDiscovery.py
scripts/: convert_videos_to_gifs.sh
static/css/: bulma.min.css
utilities_ws/src/ESWA/hrisim_postprocess/: CMakeLists.txt
utilities_ws/src/ESWA/peopledensity/: MapArea.py
utilities_ws/src/ESWA/robot_postprocess/: CMakeLists.txt  package.xml
utilities_ws/src/RA-L/hrisim_postprocess/: package.xml
utilities_ws/src/RA-L/trajectory_plot/: traj_anim.py
utilities_ws/src/hrisim_gazebo/launch/: simulation.launch
utilities_ws/src/hrisim_gazebo/scripts/: WaypointGraph.py  mapfixer.py
utilities_ws/src/hrisim_gazebo/worlds/: warehouse.world
utilities_ws/src/hrisim_mapping/launch/: tiago_mapping.launch
utilities_ws/src/peopleflow_msgs/msg/: Time.msg  WPPeopleCounters.msg  pfAgents.msg
utilities_ws/src/robot_msgs/: CMakeLists.txt
utilities_ws/src/robot_msgs/msg/: BatteryAtCharger.msg  BatteryAtChargers.msg  PathInfo.msg  TasksInfo.msg
utilities_ws/src/ros_maps_to_pedsim/launch/: ros_maps_to_pedsim.launch
utilities_ws/src/tiago_battery/: CMakeLists.txt
(+329 files in other folders)
