<?xml version="1.0"?>
<package>
  <name>peopleflow_msgs</name>
  <version>0.0.1</version>
  <description>The peopleflow_msgs package: contains messages for peopleflow</description>

  <maintainer email="lcastri@lincoln.ac.uk">Luca Castri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
