<?xml version="1.0"?>
<package>
  <name>peopleflow_bringup</name>
  <version>0.0.0</version>
  <description>peopleflow_bringup node</description>
  <maintainer email="lcastri@lincoln.ac.uk">Luca Castri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
