<package>
  <name>rqt_peopleflow</name>
  <version>0.0.0</version>
  <description>rqt_peopleflow.</description>
  <maintainer email="lcastri@todo.todo">LC</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>

  <author>Luca Castri</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend version_gte="0.2.12">rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>