<?xml version="1.0"?>
<package format="2">
  <name>hrisim_prediction_srvs</name>
  <version>0.0.1</version>
  <description>A package containing a ROS service node for risk map integration.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>

  <export></export>
</package>